able to get, click the markers and center

--- a/app/demo.html
+++ b/app/demo.html
@@ -7,20 +7,34 @@
   <title>RouteOpt</title>
   <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
   <link rel="stylesheet" type="text/css" href="demo.css" />
-  <link rel="stylesheet" type="text/css" href="styles.css" />
-  <link rel="stylesheet" type="text/css" href="../template.css" />
-  <script type="text/javascript" src='../test-credentials.js'></script>
+  <!-- <link rel="stylesheet" type="text/css" href="styles.css" /> -->
+  <!-- <link rel="stylesheet" type="text/css" href="../template.css" /> -->
+  <!-- <script type="text/javascript" src='../test-credentials.js'></script> -->
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body id="geocode">
+
+  <div class="page-header">
+    <h1>Geospacial APP: RouteOpt</h1>
+    <p>Request an optimal route from source to destination with avoidance roads.</p>
+  </div>
+  <div id="map"></div>
+  <div id="panel"></div>
+  <!-- Copyright notice -->
+  <div class="copyright">
+    &copy; Mohammed Abdullah 2023. All rights reserved.
+  </div>
+  <!-- <script type="text/javascript" src='demo.js'></script> -->
   <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-app.js";
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-analytics.js";
+    import { getFirestore, collection, getDocs, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-firestore.js";
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -39,18 +53,256 @@
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const analytics = getAnalytics(app);
+    const db = getFirestore(app);
+    /**
+   * Calculates and displays the address details of 200 S Mathilda Ave, Sunnyvale, CA
+   * based on a free-form text
+   *
+   *
+   * A full list of available request parameters can be found in the Geocoder API documentation.
+   * see: https://www.here.com/docs/bundle/geocoding-and-search-api-v7-api-reference/page/index.html#/paths/~1geocode/get
+   *
+   * @param   {H.service.Platform} platform    A stub class to access HERE services
+   */
+    function geocode(platform)
+    {
+      var geocoder = platform.getSearchService(),
+        geocodingParameters = {
+          q: 'Anna university, Chennai'
+        };
+
+      geocoder.geocode(
+        geocodingParameters,
+        onSuccess,
+        onError
+      );
+    }
+    /**
+     * This function will be called once the Geocoder REST API provides a response
+     * @param  {Object} result A JSON object representing the location(s) found.
+     * See: https://www.here.com/docs/bundle/geocoding-and-search-api-v7-api-reference/page/index.html#/paths/~1geocode/get
+     */
+    function onSuccess(result)
+    {
+      var locations = result.items;
+      /*
+       * The styling of the geocoding response on the map is entirely under the developer's control.
+       * A representitive styling can be found the full JS + HTML code of this example
+       * in the functions below:
+       */
+      addLocationsToMap(locations);
+      addLocationsToPanel(locations);
+      // log_data();
+      // ... etc.
+    }
+
+    async function log_data()
+    {
+      // Retrieve documents from Firestore collection "/userlocations"
+      const querySnapshot = await getDocs(collection(db, "userlocations"));
+      querySnapshot.forEach((doc) =>
+      {
+        console.log(doc.id, " => ", doc.data());
+      });
+    }
+
+    /**
+     * This function will be called if a communication error occurs during the JSON-P request
+     * @param  {Object} error  The error message received.
+     */
+    function onError(error)
+    {
+      alert('Can\'t reach the remote server');
+    }
+
+    /**
+     * Boilerplate map initialization code starts below:
+     */
+
+    //Step 1: initialize communication with the platform
+    // In your own code, replace variable window.apikey with your own apikey
+    var platform = new H.service.Platform({
+      apikey: "pWeYDWkQb_citdxQIiHestMcjrTwF3M8_QtMkPz657Q"
+    });
+    var defaultLayers = platform.createDefaultLayers();
+
+    //Step 2: initialize a map - this map is centered over California
+    var map = new H.Map(document.getElementById('map'),
+      defaultLayers.vector.normal.map, {
+      center: { lat: 13.0348542, lng: 80.2121687 },
+      zoom: 15,
+      pixelRatio: window.devicePixelRatio || 1
+    });
+    // add a resize listener to make sure that the map occupies the whole container
+    window.addEventListener('resize', () => map.getViewPort().resize());
+
+    var locationsContainer = document.getElementById('panel');
+
+    //Step 3: make the map interactive
+    // MapEvents enables the event system
+    // Behavior implements default interactions for pan/zoom (also on mobile touch environments)
+    var behavior = new H.mapevents.Behavior(new H.mapevents.MapEvents(map));
+
+    // Create the default UI components
+    var ui = H.ui.UI.createDefault(map, defaultLayers);
+
+    // Hold a reference to any infobubble opened
+    var bubble;
+
+    /**
+     * Opens/Closes a infobubble
+     * @param  {H.geo.Point} position     The location on the map.
+     * @param  {String} text              The contents of the infobubble.
+     */
+    function openBubble(position, text)
+    {
+      if (!bubble)
+      {
+        bubble = new H.ui.InfoBubble(
+          position,
+          { content: text });
+        ui.addBubble(bubble);
+      } else
+      {
+        bubble.setPosition(position);
+        bubble.setContent(text);
+        bubble.open();
+      }
+    }
+
+    async function storeInFirestore(address, position)
+    {
+      // Check if the collection "userlocations/route" with the specified index exists
+      var index = position.lat + "," + position.lng;
+      var collectionRef = collection(db, "userlocations/route", index);
+      var collectionSnapshot = await getDocs(collectionRef);
+      if (!collectionSnapshot.empty)
+      {
+        console.log("Collection already exists. Skipping insertion.");
+        return;
+      }
+
+      // Store the content in Firestore
+      var docRef = doc(collection(db, "userlocations/route", index));
+
+      var firestore_content = {
+        houseNumber: address.houseNumber,
+        street: address.street,
+        district: address.district,
+        city: address.city,
+        postalCode: address.postalCode,
+        county: address.county,
+        country: address.countryName,
+        position: {
+          lat: position.lat,
+          lng: position.lng
+        }
+      };
+      console.log(firestore_content);
+      await setDoc(docRef, firestore_content.position)
+        .then(function ()
+        {
+          console.log("Content stored in Firestore successfully!");
+        })
+        .catch(function (error)
+        {
+          console.error("Error storing content in Firestore: ", error);
+        });
+    };
+    /**
+     * Creates a series of list items for each location found, and adds it to the panel.
+     * @param {Object[]} locations An array of locations as received from the
+     *                             H.service.GeocodingService
+     */
+    function addLocationsToPanel(locations)
+    {
+
+      var nodeOL = document.createElement('ul'),
+        i;
+
+      nodeOL.style.fontSize = 'small';
+      nodeOL.style.marginLeft = '5%';
+      nodeOL.style.marginRight = '5%';
+
+      for (i = 0; i < locations.length; i += 1)
+      {
+        let location = locations[i];
+        var li = document.createElement('li'),
+          divLabel = document.createElement('div'),
+          button = document.createElement('button'),
+          address = location.address,
+          access = location.access,
+          content = '<strong style="font-size: large;">' + address.label + '</strong></br>';
+        var position = location.position;
+
+        storeInFirestore(address, position);
+
+        var content;
+        content += '<strong>houseNumber:</strong> ' + address.houseNumber + '<br/>';
+        content += '<strong>street:</strong> ' + address.street + '<br/>';
+        content += '<strong>district:</strong> ' + address.district + '<br/>';
+        content += '<strong>city:</strong> ' + address.city + '<br/>';
+        content += '<strong>postalCode:</strong> ' + address.postalCode + '<br/>';
+        content += '<strong>county:</strong> ' + address.county + '<br/>';
+        content += '<strong>country:</strong> ' + address.countryName + '<br/>';
+        content += '<strong>position:</strong> ' +
+          Math.abs(position.lat.toFixed(4)) + ((position.lat > 0) ? 'N' : 'S') +
+          ' ' + Math.abs(position.lng.toFixed(4)) + ((position.lng > 0) ? 'E' : 'W') + '<br/>';
+
+        divLabel.innerHTML = content;
+        li.appendChild(divLabel);
+        button.appendChild(li);
+        button.addEventListener('click', function (evt)
+        {
+          console.log(evt.target.innerHTML);
+          console.log(location.position);
+          map.setCenter(location.position);
+          openBubble(location.position, evt.target.innerHTML);
+        }, false);
+
+        nodeOL.appendChild(button);
+      }
+
+      locationsContainer.appendChild(nodeOL);
+    }
+
+
+    /**
+     * Creates a series of H.map.Markers for each location found, and adds it to the map.
+     * @param {Object[]} locations An array of locations as received from the
+     *                             H.service.GeocodingService
+     */
+    function addLocationsToMap(locations)
+    {
+      var group = new H.map.Group(),
+        position,
+        i;
+
+      // Add a marker for each location found
+      for (i = 0; i < locations.length; i += 1)
+      {
+        let location = locations[i];
+        var marker = new H.map.Marker(location.position);
+        marker.label = location.address.label;
+        group.addObject(marker);
+      }
+
+      group.addEventListener('tap', function (evt)
+      {
+        map.setCenter(evt.target.getGeometry());
+        openBubble(
+          evt.target.getGeometry(), evt.target.label);
+      }, false);
+
+      // Add the locations group to the map
+      map.addObject(group);
+      map.setCenter(group.getBoundingBox().getCenter());
+    }
+
+    // Now use the map as required...
+    geocode(platform);
+
   </script>
-  <div class="page-header">
-    <h1>Geospacial APP: RouteOpt</h1>
-    <p>Request an optimal route from source to destination with avoidance roads.</p>
-  </div>
-  <div id="map"></div>
-  <div id="panel"></div>
-  <!-- Copyright notice -->
-  <div class="copyright">
-    &copy; Mohammed Abdullah 2023. All rights reserved.
-  </div>
-  <script type="text/javascript" src='demo.js'></script>
 </body>
 
 </html>
